NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Service_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Service_Location_Type__c</fullName>
    <description>CONTAINER Authorized Service Provider classification</description>
    <label>Service Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premium Service Center</fullName>
            </value>
            <value>
                <fullName>Advanced Service Center</fullName>
            </value>
            <value>
                <fullName>Service Center</fullName>
            </value>
            <value>
                <fullName>Genset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>