NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Services_Offered__c</fullName>
    <description>Container Service field</description>
    <label>Services Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reefer Repair</fullName>
            </value>
            <value>
                <fullName>Box Repair</fullName>
            </value>
            <value>
                <fullName>Depot Service</fullName>
            </value>
            <value>
                <fullName>Rail Connection</fullName>
            </value>
            <value>
                <fullName>Genset Repair</fullName>
            </value>
            <value>
                <fullName>Mobile Service</fullName>
            </value>
            <value>
                <fullName>Trucking/Drayage</fullName>
            </value>
            <value>
                <fullName>Barge Connection</fullName>
            </value>
            <value>
                <fullName>BluEDGE Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>