NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_TransCentral_ID__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_TransCentral_ID__c</fullName>
    <description>Container Service field</description>
    <label>TransCentral ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>