NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Unit_BU__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Unit_BU__c</fullName>
    <description>Container Unit BU</description>
    <label>Unit BU</label>
    <length>4</length>
    <type>Text</type>
</CustomField>