NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_Warranty_AR_Code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Warranty_AR_Code__c</fullName>
    <description>Container Service field</description>
    <label>Warranty AR Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>