NATTQA-ENV/force-app/main/default/objects/Account/fields/CONTAINER_X24hr_Service_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_X24hr_Service_Number__c</fullName>
    <description>Container Service field</description>
    <label>24hr Service Number</label>
    <type>Phone</type>
</CustomField>