NATTQA-ENV/force-app/main/default/objects/Account/fields/CT_BaaN_customer_code__c.field-meta.xml
<CustomField>
    <fullName>CT_BaaN_customer_code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Concatenation of company code and &quot;-&quot; and JDE customer code
Field is needed for CPQ Order Intake interface</description>
    <externalId>true</externalId>
    <inlineHelpText>Concatenation of company code and &quot;-&quot; and JDE customer code
Field is needed for CPQ Order Intake interface</inlineHelpText>
    <label>JDE customer code</label>
    <length>14</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>