NATTQA-ENV/force-app/main/default/objects/Account/fields/CTBR_Balance__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Balance__c</fullName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>