NATTQA-ENV/force-app/main/default/objects/Account/fields/CTBR_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>