NATTQA-ENV/force-app/main/default/objects/Account/fields/CTBR_Customer_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Customer_CNPJ__c</fullName>
    <label>Customer CNPJ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>