NATTQA-ENV/force-app/main/default/objects/Account/fields/CTBR_Is_Shipping_Company__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Is_Shipping_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Shipping Company?</label>
    <type>Checkbox</type>
</CustomField>