NATTQA-ENV/force-app/main/default/objects/Account/fields/CTBR_Scheduled_Days_for_Customer__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Scheduled_Days_for_Customer__c</fullName>
    <label>Scheduled Days for Customer</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>