NATTQA-ENV/force-app/main/default/objects/Account/fields/Customer_Service_Representative_assigned__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Representative_assigned__c</fullName>
    <description>Customer service manager assigned to the dealer.</description>
    <inlineHelpText>Customer service manager assigned to the dealer.</inlineHelpText>
    <label>Customer Service Representative assigned</label>
    <length>100</length>
    <type>Text</type>
</CustomField>