NATTQA-ENV/force-app/main/default/objects/Account/fields/EAM_User_SafeId__c.field-meta.xml
<CustomField>
    <fullName>EAM_User_SafeId__c</fullName>
    <formula>CASESAFEID(NATT_EAM__c)</formula>
    <label>EAM User SafeId</label>
    <type>Text</type>
</CustomField>