NATTQA-ENV/force-app/main/default/objects/Account/fields/Field_Test__c.field-meta.xml
<CustomField>
    <fullName>Field_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Test</label>
    <type>Checkbox</type>
</CustomField>