NATTQA-ENV/force-app/main/default/objects/Account/fields/FSE_User_SafeID__c.field-meta.xml
<CustomField>
    <fullName>FSE_User_SafeID__c</fullName>
    <formula>CAseSafeId( NATT_FSE__c)</formula>
    <label>FSE User SafeID</label>
    <type>Text</type>
</CustomField>