NATTQA-ENV/force-app/main/default/objects/Account/fields/NAC_Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>NAC_Hold_Status__c</fullName>
    <label>NAC Hold Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>