NATTQA-ENV/force-app/main/default/objects/Account/fields/NAOCAP_Active__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Active__c</fullName>
    <description>Active flag for NA Container Marketplace Accounts</description>
    <label>Active/Inactive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>