NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_24_Hour_Service__c.field-meta.xml
<CustomField>
    <fullName>NATT_24_Hour_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT</description>
    <label>24 Hour Service</label>
    <type>Checkbox</type>
</CustomField>