NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Address_Billing__c.field-meta.xml
<CustomField>
    <fullName>NATT_Address_Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing</label>
    <referenceTo>NATT_Address__c</referenceTo>
    <relationshipLabel>Accounts (NATT Address Billing)</relationshipLabel>
    <relationshipName>AccountsBilling</relationshipName>
    <type>Lookup</type>
</CustomField>