NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Address_Headquarters__c.field-meta.xml
<CustomField>
    <fullName>NATT_Address_Headquarters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NATT</description>
    <label>Headquarters</label>
    <referenceTo>NATT_Address__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>AccountsHeadquarters</relationshipName>
    <type>Lookup</type>
</CustomField>