NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Address_Mailing__c.field-meta.xml
<CustomField>
    <fullName>NATT_Address_Mailing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NATT</description>
    <label>Mailing</label>
    <referenceTo>NATT_Address__c</referenceTo>
    <relationshipLabel>Accounts (NATT Address Mailing)</relationshipLabel>
    <relationshipName>AccountsMailing</relationshipName>
    <type>Lookup</type>
</CustomField>