NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Address_Physical__c.field-meta.xml
<CustomField>
    <fullName>NATT_Address_Physical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NATT</description>
    <label>Physical</label>
    <referenceTo>NATT_Address__c</referenceTo>
    <relationshipLabel>Accounts (NATT Address Physical)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>