NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Agreement_Level__c.field-meta.xml
<CustomField>
    <fullName>NATT_Agreement_Level__c</fullName>
    <description>NATT</description>
    <label>Agreement Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>