NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Appointment_Date__c</fullName>
    <description>NATT</description>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>