NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_AR_Code_JDE_AR_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_AR_Code_JDE_AR_Code__c</fullName>
    <description>NATT</description>
    <externalId>true</externalId>
    <label>AR Code JDE AR Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>