NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_AR_Manager__c.field-meta.xml
<CustomField>
    <fullName>NATT_AR_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A/R Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>