NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Backlog_Group__c.field-meta.xml
<CustomField>
    <fullName>NATT_Backlog_Group__c</fullName>
    <description>Backlog Group</description>
    <label>Backlog Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>