NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Business_Type__c</fullName>
    <description>NATT</description>
    <label>Business Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refrigeration Truck</fullName>
            </value>
            <value>
                <fullName>Refrigeration Trailer</fullName>
            </value>
            <value>
                <fullName>Special Products</fullName>
            </value>
            <value>
                <fullName>Truck OEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>