NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Call_Out_Rate__c.field-meta.xml
<CustomField>
    <fullName>NATT_Call_Out_Rate__c</fullName>
    <description>NATT</description>
    <label>Call Out Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>