NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Call_Out_Rate_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Call_Out_Rate_Comments__c</fullName>
    <description>NATT Call Out Rate Comments</description>
    <label>Call Out Rate Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>