NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Carrier_Dedicated__c.field-meta.xml
<CustomField>
    <fullName>NATT_Carrier_Dedicated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for NATT</description>
    <label>Carrier Dedicated</label>
    <type>Checkbox</type>
</CustomField>