NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Carrier_Dedicated_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Carrier_Dedicated_Comments__c</fullName>
    <description>for NATT</description>
    <label>Carrier Dedicated Comments</label>
    <type>TextArea</type>
</CustomField>