NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_City_State__c.field-meta.xml
<CustomField>
    <fullName>NATT_City_State__c</fullName>
    <formula>NATT_Address_Physical__r.NATT_City__c + 
IF(ISBLANK(NATT_Address_Physical__r.NATT_City__c),&quot;&quot;,&quot;/&quot;)
+  TEXT(NATT_Address_Physical__r.NATT_State_Province__c)</formula>
    <label>City/State</label>
    <type>Text</type>
</CustomField>