NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Company_Legal_name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Company_Legal_name__c</fullName>
    <label>Company Legal name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>