NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Competitor_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Competitor_Type__c</fullName>
    <description>List of competitor types for NATT Dealers</description>
    <label>Competitor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ThermoKing</fullName>
            </value>
            <value>
                <fullName>Independent Repair Shop</fullName>
            </value>
            <value>
                <fullName>Customer Self-Service Shop</fullName>
            </value>
            <value>
                <fullName>Leasing Co Service Shop</fullName>
            </value>
            <value>
                <fullName>Parts Seller</fullName>
            </value>
            <value>
                <fullName>APU</fullName>
            </value>
            <value>
                <fullName>Telematics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Lease Shop</fullName>
                <isActive>false</isActive>
                <label>Lease Shop</label>
            </value>
            <value>
                <fullName>Self-Service Shop</fullName>
                <isActive>false</isActive>
                <label>Self-Service Shop</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>