NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Contract_Management_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Contract_Management_Comments__c</fullName>
    <description>For NATT</description>
    <label>Contract Management Comments</label>
    <type>TextArea</type>
</CustomField>