NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Core_Return_Location__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location__c</fullName>
    <description>Core Return Accounts will have an associated Core Return Location</description>
    <label>Core Return Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Core_Return_Location</valueSetName>
    </valueSet>
</CustomField>