NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Core_Return_Location_Contact__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact (user with standard license) for a Core Return Location</description>
    <label>Core Return Location Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>