NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Core_Returns_Account__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Returns_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify Core Return Locations</description>
    <label>Core Returns Account</label>
    <type>Checkbox</type>
</CustomField>