NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_CTD_Parts_Inventory__c.field-meta.xml
<CustomField>
    <fullName>NATT_CTD_Parts_Inventory__c</fullName>
    <label>CTD Parts Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>