NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Customer_Number__c</fullName>
    <description>To sync up NAAT and TAVANT org</description>
    <displayFormat>{00000000}</displayFormat>
    <label>Customer Number</label>
    <type>AutoNumber</type>
</CustomField>