NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Customer_Price_Group__c.field-meta.xml
<CustomField>
    <fullName>NATT_Customer_Price_Group__c</fullName>
    <description>PPG Price List to which the account is assigned</description>
    <label>Customer Price Group</label>
    <length>3</length>
    <type>Text</type>
</CustomField>