NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Customer_Type__c</fullName>
    <description>NATT</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Customer</fullName>
            </value>
            <value>
                <fullName>External Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>