NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_D_B_A_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_D_B_A_Name__c</fullName>
    <description>NATT</description>
    <label>D/B/A Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>