NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Dealer__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NATT</description>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>Dealer Community Plus, Dealer Community Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>