NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Dealer_Account_Sharing2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Account_Sharing2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NATT Dealer Account Sharing2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (NATT Dealer Account Sharing2)</relationshipLabel>
    <relationshipName>DealerAccountSharing2</relationshipName>
    <type>Lookup</type>
</CustomField>