NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Dealer_Account_Sharing__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Account_Sharing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NATT Dealer Account Sharing</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (NATT Dealer Account Sharing)</relationshipLabel>
    <relationshipName>DealerAccountSharing</relationshipName>
    <type>Lookup</type>
</CustomField>