NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Dealer_Entity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Entity__c</fullName>
    <label>Dealer Entity</label>
    <length>225</length>
    <type>Text</type>
</CustomField>