NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Name__c</fullName>
    <description>NATT Based on the Account of the End Customer if the user is a community, if not then carrier</description>
    <formula>IF(ISBLANK(Owner.ContactId),&quot;Carrier Internal Managed&quot;, Owner.Contact.Account.Name)</formula>
    <label>Dealer Name</label>
    <type>Text</type>
</CustomField>