NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Dealer_Not_in_Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Not_in_Good_Standing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT</description>
    <label>Dealer Not in Good Standing</label>
    <type>Checkbox</type>
</CustomField>