NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Dealer_Principal__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dealer Principal of a NATT Account</description>
    <label>Dealer Principal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.NATT_Key_Business_Role__c</field>
            <operation>equals</operation>
            <value>Principal</value>
        </filterItems>
        <infoMessage>The Dealer that you selected is not the Principal for Account</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>