NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Dealer_Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealer_Years_in_Business__c</fullName>
    <description>NATT</description>
    <formula>YEAR(TODAY()) -  VALUE( NATT_Year_Dealership_Opened__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Years in Business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>