NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Dealership__c.field-meta.xml
<CustomField>
    <fullName>NATT_Dealership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For End Customer RT&apos;s. This is the dealer the End Customer belongs to.</description>
    <label>Dealership</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dealer, Direct Sale, CTM Dealer, CTBR Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>