NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Diesel_APU_ThermoKing__c.field-meta.xml
<CustomField>
    <fullName>NATT_Diesel_APU_ThermoKing__c</fullName>
    <description>Represents a ThermoKing diesel APU</description>
    <label>Diesel APU - ThermoKing</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>