NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Diesel_Truck_Leased_Carrier__c.field-meta.xml
<CustomField>
    <fullName>NATT_Diesel_Truck_Leased_Carrier__c</fullName>
    <description>Field that represents number of leased Carrier diesel trucks.</description>
    <label>Diesel Truck Leased - Carrier</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>