NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Diesel_Truck_Purchased_ThermoKing__c.field-meta.xml
<CustomField>
    <fullName>NATT_Diesel_Truck_Purchased_ThermoKing__c</fullName>
    <description>Field that represents a purchased ThermoKing diesel truck.</description>
    <label>Diesel Truck Purchased - ThermoKing</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>