NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Direct_Drive_Leased_Carrier__c.field-meta.xml
<CustomField>
    <fullName>NATT_Direct_Drive_Leased_Carrier__c</fullName>
    <description>Field that represents the number of leased Carrier direct drives.</description>
    <label>Direct Drive Leased - Carrier</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>