NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Direct_Drive_Purchased_Carrier__c.field-meta.xml
<CustomField>
    <fullName>NATT_Direct_Drive_Purchased_Carrier__c</fullName>
    <description>Field that represents a purchased Carrier direct drive.</description>
    <label>Direct Drive Purchased - Carrier</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>