NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>NATT_Distribution_Method__c</fullName>
    <description>NATT</description>
    <label>Distribution Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>