NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_DMS_Vendor__c.field-meta.xml
<CustomField>
    <fullName>NATT_DMS_Vendor__c</fullName>
    <label>DMS Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>