NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Door_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>NATT_Door_Labor_Rate__c</fullName>
    <description>NATT</description>
    <label>Door Labor Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>