NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_EAM__c.field-meta.xml
<CustomField>
    <fullName>NATT_EAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Account Manager (EAM)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>