NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Electric_APU_Carrier__c.field-meta.xml
<CustomField>
    <fullName>NATT_Electric_APU_Carrier__c</fullName>
    <description>Represents a Carrier electric APU</description>
    <label>Electric APU - Carrier</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>