NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Electric_APU_Idle_Free__c.field-meta.xml
<CustomField>
    <fullName>NATT_Electric_APU_Idle_Free__c</fullName>
    <description>Represents a Idle Free electric APU</description>
    <label>Electric APU - Idle Free</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>