NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Engine_or_Truck_Repair__c.field-meta.xml
<CustomField>
    <fullName>NATT_Engine_or_Truck_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For NATT</description>
    <label>Engine or Truck Repair</label>
    <type>Checkbox</type>
</CustomField>