NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Engine_or_Truck_Repair_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Engine_or_Truck_Repair_Comments__c</fullName>
    <label>Engine or Truck Repair Comments</label>
    <type>TextArea</type>
</CustomField>