NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_eSolutions_Fleet_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_eSolutions_Fleet_Code__c</fullName>
    <description>used for eSolutions Quotes, belongs on the end customer record. editable by internal users, but not by dealers.</description>
    <label>Lynx Fleet Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>