NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Exempt_SI_Certification__c.field-meta.xml
<CustomField>
    <fullName>NATT_Exempt_SI_Certification__c</fullName>
    <description>NATT</description>
    <label>Exempt SI Certification</label>
    <type>Date</type>
</CustomField>