NATTQA-ENV/force-app/main/default/objects/Account/fields/NATT_Facility_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Facility_Comments__c</fullName>
    <description>Area to make comments about dealer facilities</description>
    <label>Facility Comments</label>
    <type>TextArea</type>
</CustomField>